Fixed event arrow ovelapping issue on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -213,11 +213,11 @@ span#Seats-are-limited-title-mobile {
     bottom: -23px;
 }
 
-.eventSlider ul.slick-dots {
-    padding-top: 0px;
-    margin-top: 10px;
-    padding-bottom: 30px;
-}
+    .eventSlider ul.slick-dots {
+        padding-top: 0px;
+        margin-top: 0px;
+        padding-bottom: 30px;
+    }
  }   
     
 
